--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -1,3 +1,8 @@
+# TIP: For separate build and deploy phases:
+# - Remove all other branches but dev: '{dev}'
+# - Enable all the 'export taito_ci_phases=build' lines
+# - Enable the custom section
+
 image:
   name: $template_default_taito_image
   username: $template_default_taito_image_username
@@ -19,6 +24,7 @@ pipelines:
     - step:
         script:
           - export taito_mode=ci
+          # - export taito_ci_phases=build
           - taito build prepare:$BITBUCKET_BRANCH
         artifacts:
           - taitoflag_version
@@ -28,6 +34,7 @@ pipelines:
       - step: # admin prepare
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact prepare:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
           artifacts:
             - admin.docker
@@ -35,6 +42,7 @@ pipelines:
       - step: # client prepare
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact prepare:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
           artifacts:
             - client.docker
@@ -42,6 +50,7 @@ pipelines:
       - step: # graphql prepare
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact prepare:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
           artifacts:
             - graphql.docker
@@ -49,6 +58,7 @@ pipelines:
       - step: # server prepare
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact prepare:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
           artifacts:
             - server.docker
@@ -56,6 +66,7 @@ pipelines:
       - step: # www prepare
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact prepare:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
           artifacts:
             - www.docker
@@ -64,10 +75,12 @@ pipelines:
     - step:
         script:
           - export taito_mode=ci
+          # - export taito_ci_phases=build
           - taito db deploy:$BITBUCKET_BRANCH
     - step:
         script:
           - export taito_mode=ci
+          # - export taito_ci_phases=build
           - taito deployment deploy:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
         # TODO: revert deployment on fail
         # after-script:
@@ -77,6 +90,7 @@ pipelines:
     - step:
         script:
           - export taito_mode=ci
+          # - export taito_ci_phases=build
           - "taito -v artifact load: tester"
           - taito deployment wait:$BITBUCKET_BRANCH
           - taito test:$BITBUCKET_BRANCH
@@ -90,25 +104,145 @@ pipelines:
       - step: # admin release
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact release:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # client release
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact release:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # graphql release
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact release:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # server release
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact release:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
       - step: # www release
           script:
             - export taito_mode=ci
+            # - export taito_ci_phases=build
             - taito artifact release:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
     # Release build
     - step:
         script:
           - export taito_mode=ci
+          # - export taito_ci_phases=build
           - taito build release:$BITBUCKET_BRANCH
+
+
+#--------------------------------------------------------
+# CUSTOM: Example for separate deploy+test+release phase
+#--------------------------------------------------------
+
+  # custom:
+  #   deploy:
+  #   # Prepare build
+  #   - step:
+  #       script:
+  #         - export taito_mode=ci
+  #         - export taito_ci_phases=deploy,test,release
+  #         - taito build prepare:$BITBUCKET_BRANCH
+  #       artifacts:
+  #         - taitoflag_version
+  #         - taitoflag_images_exist
+  #   # Prepare artifacts in parallel
+  #   - parallel:
+  #     - step: # admin prepare
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact prepare:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+  #         artifacts:
+  #           - admin.docker
+  #           - admin-tester.docker
+  #     - step: # client prepare
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact prepare:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+  #         artifacts:
+  #           - client.docker
+  #           - client-tester.docker
+  #     - step: # graphql prepare
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact prepare:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+  #         artifacts:
+  #           - graphql.docker
+  #           - graphql-tester.docker
+  #     - step: # server prepare
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact prepare:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+  #         artifacts:
+  #           - server.docker
+  #           - server-tester.docker
+  #     - step: # www prepare
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact prepare:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+  #         artifacts:
+  #           - www.docker
+  #           - www-tester.docker
+  #   # Deploy the changes to target environment
+  #   - step:
+  #       script:
+  #         - export taito_mode=ci
+  #         - export taito_ci_phases=deploy,test,release
+  #         - taito db deploy:$BITBUCKET_BRANCH
+  #   - step:
+  #       script:
+  #         - export taito_mode=ci
+  #         - export taito_ci_phases=deploy,test,release
+  #         - taito deployment deploy:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #         # TODO: revert deployment on fail
+  #   # Test and verify deployment
+  #   - step:
+  #       script:
+  #         - export taito_mode=ci
+  #         - export taito_ci_phases=deploy,test,release
+  #         - "taito -v artifact load: tester"
+  #         - taito deployment wait:$BITBUCKET_BRANCH
+  #         - taito test:$BITBUCKET_BRANCH
+  #         - taito deployment verify:$BITBUCKET_BRANCH
+  #         # # TODO: revert deployment on fail
+  #   # Release artifacts (push previously built container images with a new tag)
+  #   - parallel:
+  #     - step: # admin release
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact release:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #     - step: # client release
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact release:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #     - step: # graphql release
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact release:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #     - step: # server release
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact release:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #     - step: # www release
+  #         script:
+  #           - export taito_mode=ci
+  #           - export taito_ci_phases=deploy,test,release
+  #           - taito artifact release:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+  #   # Release build
+  #   - step:
+  #       script:
+  #         - export taito_mode=ci
+  #         - export taito_ci_phases=deploy,test,release
+  #         - taito build release:$BITBUCKET_BRANCH
