--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -225,18 +225,15 @@ services:
       - default
     ports:
       - "9000"
-    secrets:
-      - S3_KEY_SECRET
     environment:
       MINIO_ACCESS_KEY: minio
-      # MINIO requires key as environment variable?
       MINIO_SECRET_KEY: ${taito_default_password}
 
 secrets:
   DATABASE_PASSWORD:
     file: ./secrets/${taito_env}/${db_database_app_secret}
   S3_KEY_SECRET:
-    file: ./secrets/${taito_env}/${taito_project}-${taito_env}-storage-gateway.secret
+    file: ./secrets/${taito_env}/${taito_project}-${taito_env}-storage.secretKey
   EXAMPLE_SECRET:
     file: ./secrets/${taito_env}/${taito_project}-${taito_env}-example.secret
 
