--- a/scripts/helm.yaml
+++ b/scripts/helm.yaml
@@ -179,7 +179,9 @@ full-stack:
         secret: ${taito_provider_service_account_secret}
       secrets:
         DATABASE_PASSWORD: ${db_database_app_secret}
-        S3_KEY_SECRET: ${taito_project}-${taito_env}-storage-gateway.secret
+        S3_KEY_SECRET: ${taito_project}-${taito_env}-storage.secretKey
+      secretEnv:
+        S3_KEY_ID: ${taito_project}-${taito_env}-storage.accessKey
       env:
         SENTRY_DSN: #sentryDSN
         API_PORT: '8080'
@@ -196,7 +198,6 @@ full-stack:
         S3_URL: http://${taito_project}-${taito_env}-storage:9000/
         S3_REGION: ${taito_provider_region}
         S3_BUCKET: ${taito_random_name}-${taito_env}
-        S3_KEY_ID: 070UEOQR6LX4YPZLFU0V
         S3_FORCE_PATH_STYLE: 'true'
       # cron jobs that re-use the same Docker image and settings as server
       # cronJobs:
@@ -225,9 +226,9 @@ full-stack:
         secret: ${taito_provider_service_account_secret}
       secretEnv:
         # Minio requires secret as environment variable in gateway mode
-        MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage-gateway.secret
+        MINIO_ACCESS_KEY: ${taito_project}-${taito_env}-storage.accessKey
+        MINIO_SECRET_KEY: ${taito_project}-${taito_env}-storage.secretKey
       env:
-        MINIO_ACCESS_KEY: 070UEOQR6LX4YPZLFU0V
         MINIO_CONFIG_DIR: /tmp
 
     worker:
