--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -93,6 +93,7 @@ pipelines:
           # - export taito_ci_phases=build
           - "taito -v artifact load: tester"
           - taito deployment wait:$BITBUCKET_BRANCH
+          - export taito_image=$template_default_taito_image
           - taito test:$BITBUCKET_BRANCH
           - taito deployment verify:$BITBUCKET_BRANCH
         # # TODO: revert deployment on fail
