--- a/admin/package.json
+++ b/admin/package.json
@@ -59,7 +59,7 @@
     "babel-plugin-syntax-class-properties": "6.13.0",
     "babel-plugin-transform-remove-console": "6.9.4",
     "css-loader": "3.2.0",
-    "eslint": "^6.2.2",
+    "eslint": "^5.10",
     "eslint-config-prettier": "^6.1.0",
     "eslint-config-standard": "^14.0.1",
     "eslint-loader": "^3.0.0",
@@ -67,7 +67,7 @@
     "eslint-plugin-node": "9.1.0",
     "eslint-plugin-prettier": "3.1.0",
     "eslint-plugin-promise": "4.2.1",
-    "eslint-plugin-react": "7.14.3",
+    "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-standard": "^4.0.1",
     "file-loader": "^4.2.0",
     "fork-ts-checker-webpack-plugin": "1.5.0",
