--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,7 @@
     "aws-sdk": "^2.517.0",
     "boom": "7.3.0",
     "bunyan": "1.8.12",
-    "koa": "^2.8.1",
+    "koa": "2.11.0",
     "koa-basic-auth": "4.0.0",
     "koa-joi-router": "6.0.0",
     "koa-qs": "2.0.0",
@@ -39,7 +39,7 @@
     "@types/co-body": "0.0.3",
     "@types/jest": "^24.0.18",
     "@types/joi": "14.3.3",
-    "@types/koa": "2.0.49",
+    "@types/koa": "2.0.52",
     "@types/koa-basic-auth": "2.0.3",
     "@types/koa-qs": "2.0.0",
     "@types/koa-router": "7.0.42",
